--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "canvas-confetti": "^1.9.2",
     "isbot": "^4.1.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-tooltip": "^5.26.3"
   },
   "devDependencies": {
     "@remix-run/dev": "^2.6.0",
+    "@types/canvas-confetti": "^1.6.4",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.7.4",
