--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@remix-run/react": "^2.6.0",
     "@remix-run/serve": "^2.6.0",
     "canvas-confetti": "^1.9.2",
+    "dotenv": "^16.4.5",
     "isbot": "^4.1.0",
+    "openai": "^4.28.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-tooltip": "^5.26.3"
